apps/immich/base/gateway.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
  - hostname: immich.seigra.net
    name: immich
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - kind: Secret
        name: immich-gateway-tls
      mode: Terminate
