apps/immich/base/httproute.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  hostnames:
  - immich.seigra.net
  parentRefs:
  - name: immich
  rules:
  - backendRefs:
    - name: immich-server
      port: 80
